--- a/translations/en.json
+++ b/translations/en.json
@@ -268,5 +268,11 @@
 	"folder_alpha__title"                    : "Re-Order all folders alphabetically",
 	"user_pref_title_led"                    : "Use Giants LED",
 	"user_pref_blurb_led"                    : "When active, notify you when activating a collection or starting the game a bit more visually",
-	"select_main"                            : "Select in Main Window"
+	"select_main"                            : "Select in Main Window",
+	"link_to_list"                           : "Link to...",
+	"link_to_list__title"                    : "Symlink selected files to a collection",
+	"link"                                   : "Link File(s)",
+	"confirm_link_blurb"                     : "To link mods, select the destination collection below.  Overwriting existing files is not supported.",
+	"confirm_link_title"                     : "Link Mod File(s)",
+	"destination_block"                      : "Destination file exists, overwrite is <strong>not</strong> possible"
 }
