--- a/translations/pt.json
+++ b/translations/pt.json
@@ -61,7 +61,7 @@
 	"language_name": "Português",
 	"latest_version_link_blurb": "Obtenha a versão mais recente em:",
 	"list-active__title": "Definir esta coleção como ativa em gameSettings.xml",
-	"list-active": "Definir como ativo",
+	"list-active": "Ativar pasta",
 	"list-none__title": "Desativar substituição em gameSettings.xml",
 	"list-none": "Desativar",
 	"loading_cache_subtitle": "Limpando entradas de cache adicionais (lento!)",
@@ -330,7 +330,7 @@
 	"mod_badge_fs13__title": "O mod é para FS13",
 	"mod_badge_fs11": "FS11",
 	"mod_badge_fs11__title": "O mod é para FS11",
-	"launch_game": "Jogo de Lançamento",
+	"launch_game": "Abrir jogo FS22",
 	"launch_game__title": "Iniciar o jogo",
 	"cancel_download": "Cancelar Descarregar",
 	"notes_title_version": "Versão do jogo",
